# Memento

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/anki/: CMakeLists.txt
src/audio/: CMakeLists.txt
src/dict/: CMakeLists.txt  databasemanager.cpp  expression.h
src/gui/: CMakeLists.txt
src/gui/widgets/: CMakeLists.txt  aboutwindow.cpp  mpvwidget.cpp  mpvwidget.h  searchwidget.cpp  subtitlelistwidget.cpp  subtitlelistwidget.h
src/gui/widgets/common/: CMakeLists.txt
src/gui/widgets/definition/: CMakeLists.txt  glossarywidget.cpp  pitchwidget.cpp
src/gui/widgets/overlay/: CMakeLists.txt  ocroverlay.cpp  ocroverlay.h  playermenu.cpp  playermenu.h  playeroverlay.cpp  progressslider.cpp
src/gui/widgets/settings/: CMakeLists.txt  ankisettings.cpp
src/ocr/: CMakeLists.txt
src/util/: CMakeLists.txt  globalmediator.h
src/util/timer/: CMakeLists.txt
