add_library(
    dictionary_db
    dictionary.cpp
    databasemanager.cpp
    yomidbbuilder.c
    expression.h
)
if (WIN32)
    target_link_libraries(
        dictionary_db
        ${SQLITE}
        ${JSONC}
        ${LIBZIP}
        ${MECAB}
        Qt6::Core
        Qt6::Widgets
        "-lregex"
    )
else()
    target_link_libraries(
        dictionary_db
        ${SQLITE}
        ${JSONC}
        ${LIBZIP}
        ${MECAB}
        Qt6::Core
        Qt6::Widgets
    )
endif()
