add_library(
    definitionwidget
    definitionwidget.cpp
    definitionwidget.ui
    glossarylabel.cpp
    glossarywidget.cpp
    kanjiwidget.cpp
    pitchwidget.cpp
    tagwidget.cpp
    termwidget.cpp
    termwidget.ui
)
target_link_libraries(
    definitionwidget
    Qt6::Widgets
    Qt6::Network
    dictionary_db
    flowlayout
    audioplayer
)