add_library(
    ankisettings
    ankisettings.cpp
    ankisettings.ui
    cardbuilder.cpp
    cardbuilder.ui
    ankisettingshelp.cpp
    ankisettingshelp.ui
)
target_link_libraries(
    ankisettings
    globalmediator
    Qt6::Widgets
    anki
    scrollcombobox
    scrolldoublespinbox
)

add_library(
    audiosourcesettings
    audiosourcesettings.cpp
    audiosourcesettings.ui
)
target_link_libraries(
    audiosourcesettings
    globalmediator
    Qt6::Widgets
)

add_library(
    behaviorsettings
    behaviorsettings.cpp
    behaviorsettings.ui
)
target_link_libraries(
    behaviorsettings
    globalmediator
    Qt6::Widgets
)

add_library(
    dictionarysettings
    dictionarysettings.cpp
    dictionarysettings.ui
)
target_link_libraries(
    dictionarysettings
    globalmediator
    Qt6::Widgets
    dictionary_db
)

add_library(
    searchsettings
    searchsettings.cpp
    searchsettings.ui
)
target_link_libraries(
    searchsettings
    Qt6::Widgets
    Qt6::Core
)

add_library(
    interfacesettings
    interfacesettings.cpp
    interfacesettings.ui
)
target_link_libraries(
    interfacesettings
    Qt6::Widgets
    Qt6::Core
)

add_library(
    optionswindow
    optionswindow.cpp
    optionswindow.ui
)
target_link_libraries(
    optionswindow
    ankisettings
    audiosourcesettings
    behaviorsettings
    dictionarysettings
    interfacesettings
    searchsettings
)